--- a/par_2_carga_archivos.ipynb
+++ b/par_2_carga_archivos.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "38e9ac2e",
    "metadata": {},
    "outputs": [
@@ -716,53 +716,108 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>edad</th>\n",
+       "      <th>experiencia</th>\n",
+       "      <th>nivel</th>\n",
+       "      <th>salario</th>\n",
+       "      <th>mascota</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>gatos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Eva</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Marta</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Junior</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paula</td>\n",
+       "      <td>30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [0]"
+       "  nombre  edad  experiencia   nivel  salario mascota\n",
+       "0    Ana    34            5  Senior    50000   gatos\n",
+       "1    Eva    37            2     Mid    35000     NaN\n",
+       "2  Marta    27            1  Junior    25000     NaN\n",
+       "3  Paula    30            3     Mid    35000     NaN"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_personal1 = pd.json_normalize(df_personal)\n",
-    "df_personal1"
+    "df_personal_normal = pd.json_normalize(df_personal['workers']) \n",
+    "df_personal_normal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
+   "id": "cab5ab2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  nombre  edad  experiencia   nivel  salario mascota\n",
+      "0    Ana    34            5  Senior    50000   gatos\n",
+      "1    Eva    37            2     Mid    35000     NaN\n",
+      "2  Marta    27            1  Junior    25000     NaN\n",
+      "3  Paula    30            3     Mid    35000     NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_personal_normal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "94620a61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_personal1.to_json('Files/personal1.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4fbab97f",
-   "metadata": {},
-   "source": [
-    "seguir desde aca! ejercicio 6"
+    "df_personal_normal.to_json('Files/personal_normal.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "d7a39530",
    "metadata": {},
    "outputs": [
@@ -787,66 +842,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>workers</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>edad</th>\n",
+       "      <th>experiencia</th>\n",
+       "      <th>nivel</th>\n",
+       "      <th>salario</th>\n",
+       "      <th>mascota</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{'nombre': 'Ana', 'edad': 34, 'experiencia': 5...</td>\n",
+       "      <td>Ana</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>gatos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{'nombre': 'Eva', 'edad': 37, 'experiencia': 2...</td>\n",
+       "      <td>Eva</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>{'nombre': 'Marta', 'edad': 27, 'experiencia':...</td>\n",
+       "      <td>Marta</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Junior</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>{'nombre': 'Paula', 'edad': 30, 'experiencia':...</td>\n",
+       "      <td>Paula</td>\n",
+       "      <td>30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             workers\n",
-       "0  {'nombre': 'Ana', 'edad': 34, 'experiencia': 5...\n",
-       "1  {'nombre': 'Eva', 'edad': 37, 'experiencia': 2...\n",
-       "2  {'nombre': 'Marta', 'edad': 27, 'experiencia':...\n",
-       "3  {'nombre': 'Paula', 'edad': 30, 'experiencia':..."
+       "  nombre  edad  experiencia   nivel  salario mascota\n",
+       "0    Ana    34            5  Senior    50000   gatos\n",
+       "1    Eva    37            2     Mid    35000    None\n",
+       "2  Marta    27            1  Junior    25000    None\n",
+       "3  Paula    30            3     Mid    35000    None"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_personal1 = pd.read_json('Files/personal.json')\n",
-    "df_personal1.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "b8580206",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_personal1)"
+    "df_personal_normal = pd.read_json('Files/personal_normal.json')\n",
+    "df_personal_normal.head()\n"
    ]
   },
   {
